Gtk-3.20&3.22&4.0: [Inkscape] Fix truncated labels in GimpSpinScale
That widget still had some werid/legacy inner-padding? :(

--- a/gtk/sass/3.20/_3rd-party.scss
+++ b/gtk/sass/3.20/_3rd-party.scss
@@ -2349,3 +2349,16 @@ spinbutton#ZoomStatus {
   }
 }
 
+#InkscapePanel spinbutton > entry {
+  // workaround for truncated labels in GimpSpinScale
+  // FIXME: need to override weird inner-padding?
+  margin: if($ref_weight < 1.0, rem(-2.7px) 0,
+                                rem(-4px) 0);
+
+  // re-fit to the parent entry node spacing
+  > progress {
+    margin: if($ref_weight < 1.0, rem(-2.7px) 0,
+                                  rem(-4px) 0);
+  }
+}
+
